# SyscallTempering

./: CMakeLists.txt  README.md  main.cpp
include/: PeParsing.h  helpers.h  syscalls.h
src/: PeParsing.cpp  helpers.cpp  syscalls.cpp
